# hackathon_bot

./: .dockerignore  .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish  activate.nu
core/: celery.py  settings.py  urls.py
nginx/: default.conf
shared/: models.py
tracker/: __init__.py  admin.py  bot.py  choices.py  forms.py  models.py  tasks.py  urls.py  utils.py  values.py  views.py
tracker/management/commands/: check_assigned_issues.py  create_superuser.py  run_telegram_bot.py
tracker/migrations/: 0001_initial.py  0002_repository_time_limit.py  0003_customuser_role.py  0004_contributor.py
tracker/telegram/: bot.py  templates.py
tracker/telegram/db/: crud.py  database.py  models.py
tracker/templates/: signup.html
tracker/tests/: test_models.py  test_utils.py
